--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  background-color: #e5e5e5;
+  color: #002240;
   min-height: 100vh;
   overflow: auto;
 }
@@ -26,17 +28,20 @@ form button {
   padding: 0.5rem;
   font-size: 2rem;
   margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 2px solid #002240;
 }
 
 form button {
-  color: #d88771;
+  color: #002240;
   background: white;
   cursor: pointer;
   transition: all 0.3s ease;
+  outline: none;
 }
 
 form button:hover {
-  background: #d88771;
+  background: #002240;
   color: white;
 }
 
@@ -60,6 +65,7 @@ form button:hover {
   justify-content: space-between;
   align-items: center;
   transition: all 0.5s ease;
+  border-radius: 0.5rem;
 }
 
 .todo li {
@@ -68,13 +74,14 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background-color: #ff6f47;
+  background-color: #002240;
   color: white;
   border: none;
   padding: 1rem;
   cursor: pointer;
   font-size: 1rem;
   margin: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .complete-btn {
@@ -95,10 +102,9 @@ form button:hover {
   opacity: 0.5;
 }
 
-@media (max-width: 450px) {
-  form {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    padding: 0.5rem;
+@media (max-width: 440px) {
+  form input {
+    width: 50%;
+    margin-left: 2rem;
   }
 }
